--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
  * {
+     outline: solid 2px red;
      margin: 0;
      padding: 0;
      box-sizing: border-box;
@@ -17,16 +18,14 @@
  }
 
  .header_nav {
-     width: 100%;
-     min-width: 1440px;
+     width: 100vw;
      background-color: #131313;
  }
 
 .header_content  {
      font-size: 0.8rem;
      display: flex;
-     max-width: 1400px;
-     min-width: 1400px;
+     max-width: 90vw;
      height: 85px;
      margin: 0px auto;
      align-items: center;
@@ -83,7 +82,7 @@
 
  .calc, .sub {
     background-color: #E3B873;
-    height: 4rem;
+    height: 8vh;
     width: 15rem;
     border: none;
     border-radius: 0.1rem;
@@ -106,11 +105,10 @@
 }
 
 
-.first_step, .second_step, .third_step, .fourth_step, .sixth_step, .seventh_step, .final_section, footer, .mobile_form  {
+.first_step, .second_step, .third_step, .fourth_step, .fifth_step, .sixth_step, .seventh_step, .final_section, footer, .mobile_form  {
      background-color: #131313;
      width: 100vw;
      height: 100vh;
-     min-width: 1440px;
  }
 
 .mobile_form {
@@ -124,7 +122,6 @@
  .first_step {
     background: rgba(0, 0, 0, 0.7) url("img/main-cover.png");
     background-blend-mode: darken;
-    width: 100%;
     height: 60rem;
     background-size: cover;
     display: flex;
@@ -171,7 +168,7 @@
 
  .content_of_first_section, .content_of_second_section, .content_of_third_section, .content_of_fourth_section, .content_of_fifth_step, .content_of_sixth_step, .content_of_seventh_step, .content_of_final_section, .content_of_footer {
     max-width: 1440px;
-    min-width: 1440px;
+    width: 90vw;
     margin: auto;
     padding: 0 1rem;
  }
@@ -181,9 +178,11 @@
     align-items: center;
     height: auto;
     padding-left: 30px;
+    width: 90vw;
 }
 
  .content_of_second_section {
+    position: relative;
     gap: 4rem;
     flex-wrap: wrap;
     height: auto;
@@ -254,10 +253,10 @@
  }
 
  .noss {
-     display: flex;
-     gap: 3rem;
-     position: relative;
-     left: -8rem;
+    display: flex;
+    left: 40%;
+    gap: 3rem;
+    position: relative;
  }
 
  .nav_of_second_section li {
@@ -274,13 +273,15 @@
 }
 
 .description {
+    justify-content: space-between;
     color: aliceblue;
     display: flex;
     flex-flow: row wrap;
-    gap: 5rem;
     height: auto;
     line-height: 26.73px;
+    max-width: 25rem;
 }
+
 
 .description h3 {
     color: #E3B873;
@@ -303,7 +304,6 @@
 .nav_of_second_section{
     display: flex;
     font-size: medium;
-    justify-content: flex-end;
 }
 
 .nav_of_second_section ul li:first-of-type a {
@@ -331,19 +331,16 @@
 }
 
 .player {
+    background-size: cover;
     cursor: pointer;
     position: relative;
-    width: 61rem;
-    height: 32rem;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)), url("img/repair.png");
-    background-size: cover;  
+    width: 100%;
+    height: auto;
 }
 
-.player::before   {
-    content: url('img/player_btn_for_desctop.svg');
-    position: relative;
-    top: 36%;
-    left: 44%;
+#repair_img_3step {
+    width: 100%;
+    height: auto;
 }
 
 .repair_img {
@@ -353,11 +350,6 @@
     filter: brightness(50%);
 }
 
-.player_button {
-    position: absolute;
-    top: 35%;
-    left: 40%;
-}
 
 .header_of_third_section {
     display: flex;
@@ -451,15 +443,14 @@
     }
 
     .desc1 {
-        max-width: 20rem;
-        height: 22rem;
+        max-width: 80%;
         display: flex;
         position: relative;
         flex-direction: column;
         background-color: #fff;
         padding: 1rem 4rem;
         top: -8rem;
-        left: 2.2rem;
+        left: 10%;
         justify-content: flex-start;
         box-shadow: 1px 1px 30px #1313130d;
     }
@@ -500,13 +491,13 @@
     }
 
     .fifth_step {
+        background-color: #fff;
         height: 41rem;
         background-image: url(img/house.png);
         background-repeat: no-repeat;
     }
 
     .content_of_fifth_step {
-        width: auto;
         position: relative;
         display: flex;
         justify-content: space-around;
@@ -599,8 +590,9 @@
     }
 
     .content_of_sixth_step {
+        align-items: center;
         flex-wrap: wrap;
-        gap: 15rem;
+        /* gap: 15rem; */
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -608,12 +600,14 @@
     }
 
     .list_of_arch_styles li {
+        width: 100%;
         list-style-type: none;
         line-height: 3.4rem;
         font-size: 1.5rem;
     }
 
     .first_col_of_six_step {
+        width: 22%;
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
@@ -621,12 +615,14 @@
     }
 
     .arch {
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
 
     .gallery2 {
+        width: 55%;
         display: flex;
         gap: 3rem;
     }
@@ -669,6 +665,21 @@
         gap: 3em;
         height: auto;
     }
+
+            .gallery_item1 > img {
+            height: auto;
+            width: 100%;
+        }
+
+        .gallery_item2 > img {
+            height: auto;
+            width: 100%;
+        }
+
+        .gallery_item3 > img {
+            height: auto;
+            width: 100%;
+        }
 
     .seventh_gallery {
         display: flex;
@@ -726,7 +737,8 @@
     }
 
     .final_section {
-        height: 75rem;
+        width: 100%;
+        height: 75vh;
     }
 
     .content_of_final_section {
@@ -793,11 +805,9 @@
         font-style: normal;
     }
 
-    .map {
-        background-image: url("img/map_desktop.png");
-        height: 40rem;
-        width: 70rem;
-        background-size: contain;
+    .map img {
+        height: auto;
+        width: 100%;
     }
 
     .lead-header {
@@ -842,7 +852,8 @@
     }
 
     .test {
-        max-height: 33rem;
+
+        height: auto;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -850,22 +861,57 @@
         justify-content: space-between;
     }
 
-    .slider {
+    .content_of_test {
         display: flex;
-        width: auto;
+        max-width: 76rem;
+        flex-direction: column;
+        gap: 5vh;
     }
 
+    .content_of_test>p, h2 {
+        max-width: 36%;
+        line-height: 2rem;
+    }
+
+    .content_of_test #picture {
+        top: 6.5rem;
+        display: flex;
+        max-width: 58%;
+        height: auto;
+        position: absolute;
+        right: 1rem;
+    }
+
+
+    #picture {
+        width: 100%;
+        height: auto;
+    }
     
+    .first_col img {
+        width: 100%;
+        height: auto;
+    }
 
-    #picture1 {
-        height: 39em;
-        object-fit: cover;
-        width: 354px;
+    .second_col img {
+        width: 100%;
+        height: auto;
+    }
+
+    .picture1 img {
+        width: 100%;
+        height: auto;
+    }
+
+    .mobile_img {
+        display: none;
     }
 
 
 
-    @media screen and (max-width: 414px) {
+
+
+    @media screen and (max-width: 768px) {
 
         * {
             margin: 0;
@@ -901,7 +947,7 @@
         }
 
         .first_step {
-            height: 40rem;
+            height: 100vh;
         }
 
         .content_of_first_section, .content_of_second_section {
@@ -911,11 +957,11 @@
         }
 
         .content_of_first_section {
-            padding: 1rem;
+            padding: 2rem;
         }
 
         .logo {
-            font-size: 1rem;
+            font-size: 3vw;
         }
 
         .buttons {
@@ -934,12 +980,11 @@
         }
 
         .common-font {
-            font-size: 1rem;
+            font-size: 3vw;
         }
 
         .content_text {
-            width: 24rem;
-            font-size: 1.5em;
+            width: 100%;
             display: flex;
             flex-direction: column;
             gap: 1rem;
@@ -954,9 +999,9 @@
         .content_of_second_section, .content_of_third_section,.content_of_fourth_section,.cnt_of_form {
             flex-direction: column;
             align-items: center;
-            padding: 1rem;
-            max-width: 100%;
-            min-width: 100%;
+            padding: 2rem;
+            max-width: 100vw;
+            min-width: 100vw;
         }
 
         .Completed_projects {
@@ -966,7 +1011,15 @@
             min-width: none;
         }
 
+        .content_of_test>p, h2 {
+            padding: 0 5vw;
+            max-width: 100%;
+            line-height: 5vw;
+            text-align: center;
+        }
+
         .header-text {
+            font-size: 3.5vw;
             line-height: 1.5;
         }
 
@@ -986,14 +1039,14 @@
         }
 
         .description {
-            margin-top: -3rem;
             justify-content: flex-start;
             display: flex;
             flex-direction: row;
-            width: 23rem;
+            width: 100%;
+            max-width: none;
             order: 4;
             line-height: normal;
-            gap: 0;
+            gap: 1rem;
         }
         
         .test {
@@ -1002,9 +1055,49 @@
             flex-direction: column;
             height: auto;
             max-height: none;
-            gap: 6rem;
+            gap: 7vh;
             max-width: 100%;
             min-width: 100%;
+        }
+
+        .content_of_test #picture {
+            display: flex;
+            max-width: none;
+            width: 100%;
+            height: auto;
+            position: relative;
+            left: 0;
+            top: 0;
+        }
+
+        .wrapper {
+            position: relative;
+            width: 100%;
+            height: auto;
+        }
+
+        .wrapper::before {
+            content: "";
+            background-image: url("img/slider_left.svg");
+            position: absolute;
+            background-size: cover;
+            left: 5%;
+            top: 40%;
+            height: 10vw;
+            width: 10vw;
+            z-index: 1;
+        }
+
+        .wrapper::after {
+            content: "";
+            background-image: url("img/slider_right.svg");
+            position: absolute;
+            background-size: cover;
+            right: 5%;
+            top: 40%;
+            height: 10vw;
+            width: 10vw;
+            z-index: 1;
         }
 
 
@@ -1019,8 +1112,8 @@
         }
         
         .description h3 {
-            width: 10rem;
-            font-size: 1rem;
+            width: 31vw;
+            font-size: 2vw;
             line-height: 2rem;
         }
 
@@ -1035,25 +1128,30 @@
 
         .picture_of_camera {
             height: auto;
-            width: 10rem;
+            width: 20vw;
         }
 
         .player {
+            width: 100%;
+            height: auto;
             position: relative;
-            top: 0%;
-            width: 23.5rem;
-            height: 15rem;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)), url("img/repair.png");
-            background-size: cover;
         }
 
         .player::before {
-            content: url('img/player_button.svg');
-            position: relative;
-            top: 33%;
-            left: 39%;
-            width: 15rem;
-            height: 15rem;
+            content: "";
+            background-image: url(img/player_button.svg);
+            position: absolute;
+            background-size: cover;
+            left: 50%;
+            top: 53%;
+            transform: translate(-50%, -50%);
+            height: 25vw;
+            width: 25vw;
+            z-index: 1;
+        }
+
+        #repair_img_3step {
+            filter: brightness(50%);
         }
 
         .third_step {
@@ -1062,8 +1160,6 @@
 
         .content_of_third_section {
             background-color: #131313;
-            max-width: 100%;
-            min-width: 100%;
         }
 
         .about_camera {
@@ -1072,32 +1168,38 @@
             max-width: none;
         }
 
+        .lead-header {
+            font-size: 4vw;
+        }
+
         #picture_of_line {
             height: auto;
             width: 10rem;
         }
 
         .form label {
+            font-size: 3vw;
             color: rgba(255, 255, 255, 0.399);
         }
 
         .form {
             flex-wrap: nowrap;
             flex-direction: column;
-            gap: 2rem;
-            width: auto;
+            gap: 6vh;
+            width: 100%;
             height: auto;
             justify-content: space-evenly;
         }
 
         .content_of_third_section .form {
-            font-size: 1rem;
+            font-size: 2vw;
         }
 
         input[type=text] {
-            width: 24rem;
-            font-size: 1rem;
-            padding: 1rem 0px;
+            height: 9vw;
+            width: 100%;
+            font-size: 2vw;
+            padding: 2vh 0px;
             box-sizing: border-box;
             background-color: #131313;
             color: #fff;
@@ -1107,7 +1209,7 @@
 
         ::placeholder {
             color: #fff;
-            font-size: 1em;
+            font-size: 4vw;
         }
 
         .black_text {
@@ -1121,12 +1223,12 @@
         }
 
         .checkbox .common-font {
-            font-size: 1rem;
+            font-size: 3vw;
         }
 
         .content_of_third_section .form_button {
             display: block;
-            font-size: 1rem;
+            font-size: 3vw;
             order: 1;
             position: relative;
             bottom: -2.7rem;
@@ -1156,42 +1258,45 @@
         }
 
         .gallery_item1,.gallery_item2,.gallery_item3 {
-            height: 40rem;
+            height: auto;
+            margin-bottom: -7vh;
         }
+
+        
 
         .gallery_item1 > img {
             height: auto;
-            width: 21.9rem;
+            width: 100%;
         }
 
         .gallery_item2 > img {
             height: auto;
-            width: 21.9rem;
+            width: 100%;
         }
 
         .gallery_item3 > img {
             height: auto;
-            width: 21.9rem;
+            width: 100%;
         }
 
         .desc1 ul li {
-            line-height: 2rem;
+            line-height: 7vw;
             color: #13131341;
         }
 
         .desc1 .header-text {
-            font-size: 1rem;
+            font-size: 3.5vw;
         }
 
         .desc1 {
             max-width: none;
-            width: 17rem;
-            height: 21rem;
+            width: 70vw;
+            height: 61vw;
             display: flex;
             position: relative;
             flex-direction: column;
             background-color: #fff;
-            padding: 1rem 2rem;
+            padding: 3vw 9vw;
             top: -10rem;
             left: 0;
             justify-content: flex-start;
@@ -1208,9 +1313,8 @@
         }
 
         .btn_desc1 {
-            bottom: -1.2em;
-            height: 1.5em;
-            width: 13em;
+            bottom: -5.2vw;
+            width: 49vw;
         }
 
         .fourth_step {
@@ -1219,7 +1323,7 @@
 
         #repair {
             height: auto;
-            width: 10rem;
+            width: 20vw;
         }
 
         .sixth_step {
@@ -1229,13 +1333,24 @@
             background-color: #fff;
         }
 
+        .header_of_sixth_section .header-text {
+            width: auto;
+        }
+
+        .first_col_of_six_step {
+            width: 100%;
+        }
+
         .content_of_sixth_step {
+            padding: 2rem;
             align-items: center;
             text-align: center;
             gap: 2rem;
             max-width: 100%;
             min-width: 100%;
         }
+
+        
 
         /* .first_col_of_six_step {
             display: none;
@@ -1250,6 +1365,7 @@
         }
 
         .gallery2 {
+            width: 100%;
             flex-direction: row;
             gap: 0rem;
         }
@@ -1286,38 +1402,20 @@
             height: 1rem;
         }
 
-        .picture1 {
-            position: relative;
-        }
 
-        .picture1::after {
-            content: url('img/slider_left.svg');
-            position: absolute;
-            top: 43%;
-            left: 4%;
-            width: fit-content;
-            height: 1rem;
-        }
 
-        .picture1::before {
-            content: url('img/slider_right.svg');
-            position: absolute;
-            top: 43%;
-            right: 4%;
-            width: fit-content;
-            height: 1rem;
-        }
+
 
         .mobile_form {
             display: block;
             height: auto;
-            margin-top: -11rem;
+            margin-top: -36vw;
         }
 
         .first_input,.second_input,.third_input {
             flex-direction: column;
             display: flex;
-            height: 4rem;
+            height: 10vw;
         }
 
         .cnt_of_form {
@@ -1338,9 +1436,9 @@
         }
 
         .mobile_form .form {
-            padding-top: 9em;
+            padding-top: 40vw;
             gap: 4em;
-            width: 24rem;
+            width: 100%;
         }
 
         .second_col {
@@ -1350,13 +1448,13 @@
 
         .mobile .gold-button {
             display: block;
-            font-size: 1.3em;
+            font-size: 2vw;
             order: 1;
         }
 
         .mobile .checkbox {
             order: 0;
-            font-size: 1.3rem;
+            font-size: 2vw;
         }
 
         .final_section {
@@ -1366,15 +1464,15 @@
 
         .content_of_final_section {
             position: static;
-            padding: 2rem;
+            padding: 4vw;
             height: auto;
             max-width: 100%;
             min-width: 100%;
         }
 
-        .map {
-            height: 15rem;
-            width: 24rem;
+        .map img {
+            height: auto;
+            width: 100%;
             order: 0;
         }
 
@@ -1396,5 +1494,44 @@
             display: none;
         }
 
+
+        .mobile_img {
+            display: block;
+            width: 100%;
+            height: auto;
+            position: relative;
+        }
+
+        
+
+        .gallery2 .mobile_img img {
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+
+        .mobile_img::before {
+            content: "";
+            background-image: url("img/slider_left.svg");
+            position: absolute;
+            background-size: cover;
+            left: 5%;
+            top: 40%;
+            height: 10vw;
+            width: 10vw;
+            z-index: 1;
+        }
+
+        .mobile_img::after {
+            content: "";
+            background-image: url("img/slider_right.svg");
+            position: absolute;
+            background-size: cover;
+            right: 5%;
+            top: 40%;
+            height: 10vw;
+            width: 10vw;
+            z-index: 1;
+        }
     }
 
