--- a/style.css
+++ b/style.css
@@ -331,11 +331,26 @@
 }
 
 .player {
-    background-size: cover;
-    cursor: pointer;
-    position: relative;
     width: 100%;
     height: auto;
+    position: relative;
+}
+
+.player::before {
+    content: "";
+    background-image: url(img/player_button.svg);
+    position: absolute;
+    background-size: cover;
+    left: 50%;
+    top: 53%;
+    transform: translate(-50%, -50%);
+    height: 25vw;
+    width: 25vw;
+    z-index: 1;
+}
+
+#repair_img_3step {
+    filter: brightness(50%);
 }
 
 #repair_img_3step {
@@ -577,7 +592,7 @@
     }
 
     .sixth_step {
-        background: rgba(0, 0, 0, 0.8) url("img/fantasies.png");
+        background: rgba(0, 0, 0, 0.8) url("img/img6.png");
         background-blend-mode: darken;
         background-size: cover;
         margin-top: 20em;
