--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@
 
  .calc, .sub {
     background-color: #E3B873;
-    height: 8vh;
+    height: 4vh;
     width: 15rem;
     border: none;
     border-radius: 0.1rem;
@@ -344,8 +344,8 @@
     left: 50%;
     top: 53%;
     transform: translate(-50%, -50%);
-    height: 25vw;
-    width: 25vw;
+    height: 30%;
+    width: 16%;
     z-index: 1;
 }
 
@@ -458,21 +458,22 @@
     }
 
     .desc1 {
-        max-width: 80%;
+        height: 25vw;
+        max-width: 25vw;
         display: flex;
         position: relative;
         flex-direction: column;
         background-color: #fff;
-        padding: 1rem 4rem;
-        top: -8rem;
-        left: 10%;
+        padding: 2vw 4vw;
+        top: -8vw;
+        left: 1vw;
         justify-content: flex-start;
         box-shadow: 1px 1px 30px #1313130d;
     }
 
     .redecorating {
         position: relative;
-        font-size: medium;
+        font-size: 1.5em;
         right: 1em;
         text-transform: capitalize;
     }
@@ -483,13 +484,13 @@
     }
 
     .btn_desc1 {
-        margin-bottom: 5px;
-        padding: 10px 17px;
+        margin-bottom: 5vw;
+        padding: 1vw 2vw;
         left: 0;
         position: absolute;
-        bottom: -2rem;
+        bottom: -7.5vw;
         border-radius: 0%;
-        font-size: medium;
+        font-size: 1.5vw;
     }
 
     .list_of_fifth {
@@ -753,7 +754,7 @@
 
     .final_section {
         width: 100%;
-        height: 75vh;
+        height: auto;
     }
 
     .content_of_final_section {
