--- a/style.css
+++ b/style.css
@@ -248,10 +248,10 @@
  }
 
  .noss {
-    width: auto;
+    width: 50%;
     display: flex;
-    left: 40%;
-    gap: 3rem;
+    left: 49%;
+    gap: 2rem;
     position: relative;
 }
 
