--- a/style.css
+++ b/style.css
@@ -987,7 +987,7 @@
 
 
         .header_nav {
-            height: 10rem;
+            height: 10vh;
         }
 
         .first_step {
@@ -1005,11 +1005,11 @@
         }
 
         .logo {
-            font-size: 1.5em;
+            font-size: 1em;
         }
 
         .number {
-            font-size: 1.5em;           
+            font-size: 1em;           
         }
 
         .buttons {
@@ -1032,12 +1032,8 @@
         }
 
         .content_text {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            height: auto;
-            color: #fff;
+         color: #fff;
+         padding-top: 248px;
         }
 
         .nav_of_second_section {
@@ -1223,7 +1219,7 @@
 
         .form label {
             font-size: 3vw;
-            color: rgba(255, 255, 255, 0.399);
+            color: rgba(255, 255, 255, 0.879);
         }
 
         .form {
@@ -1646,7 +1642,7 @@
             gap: 2rem;
             flex-wrap: wrap;
             display: flex;
-            width: 70%;
+            width: 90%;
             flex-direction: column;
             justify-content: space-around;
             height: auto;
