--- a/style.css
+++ b/style.css
@@ -183,13 +183,15 @@
 
 
  .content_of_second_section {
-    position: relative;
-    gap: 4rem;
-    flex-wrap: wrap;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+/*     position: relative; */
+/*     gap: 4rem;
+    flex-wrap: wrap; */
+    height: 500px;
+    display: grid;
+    grid-template-columns: repeat(5, 20%);
+    grid-template-rows: 100px 200px 200px;
+/*     flex-direction: column;
+    justify-content: center; */
  }
 
  .content_of_third_section {
@@ -242,11 +244,13 @@
  }
 
  .noss {
-    width: 50%;
-    display: flex;
-    left: 49%;
-    gap: 3rem;
-    position: relative;
+     display: flex;
+    height: 20px;
+    width: 520px;
+}
+
+.noss li {
+    margin-right: 20px;
 }
 
  .nav_of_second_section li {
@@ -264,14 +268,20 @@
 }
 
 .description {
-    justify-content: space-between;
+    grid-column: 1 / 2;
+    grid-row: 3;
+/*     display: grid; */
+    margin-top: 20px;
+    grid-template-columns: 200px 200px;
+    grid-template-rows: 100px 100px;
     color: aliceblue;
-    display: flex;
+}
+/*     display: flex;
     flex-flow: row wrap;
     height: auto;
     line-height: 26.73px;
-    max-width: 25rem;
-}
+    max-width: 25rem; */
+
 
 
 .description h3 {
@@ -293,16 +303,18 @@
 }
 
 .nav_of_second_section{
-    width: 100%;
-    display: flex;
+    height: 200px;
+    grid-area: 1 / 3 / 2 / 5;
     font-size: medium;
 }
 
-.nav_of_second_section ul li:first-of-type a {
+
+
+/* .nav_of_second_section ul li:first-of-type a {
     color: #E3B873;
     border-bottom: #E3B873;
     border-bottom-width: 2em;
-}
+} */
 
 .line {
     border-bottom-style: solid;
@@ -410,6 +422,8 @@
       border-radius: 2px;
       padding: 1em 4em;
   }
+
+  
 
 
     .header_of_fourth_section {
@@ -805,7 +819,7 @@
 
     .lead-header {
         margin-bottom: 1rem;
-        font-size: 1.8rem;
+        font-size: 2em;
         line-height: inherit;
     }
 
@@ -841,33 +855,31 @@
     }
 
     .test {
-
-        height: auto;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        gap: 1rem;
-        justify-content: space-between;
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
     }
 
     .content_of_test {
-        display: flex;
+        grid-column: 1;
+        grid-row: 2;
+/*         display: flex; */
         max-width: 76rem;
-        flex-direction: column;
-        gap: 5vh;
+/*         flex-direction: column;
+        gap: 5vh; */
     }
 
     .content_of_test>p, h2 {
-        max-width: 36%;
+        margin-bottom: 20px;
+        margin-right: 20px;
         line-height: 2rem;
     }
 
     .content_of_test #picture {
         top: 6.5rem;
-        display: flex;
+/*         display: flex; */
         max-width: 50%;
         height: auto;
-        position: absolute;
+/*         position: absolute; */
         right: 1rem;
         max-height: 80%;
     }
@@ -958,7 +970,115 @@
         color: #fff;
     }
 
+    .image {
+        background-size: cover;
+        display: none;
+        height: 378px;
+        max-width: 602px;
+        position: relative;
+    }
 
+/*     .image::before:hover {
+        opacity: 1;
+    } */
+
+    .image.active{
+        display: block;
+    }
+
+    #slider {
+        position: relative;
+        grid-column: 3 / 6;
+        grid-row: 2;
+        height: 480px;
+        max-width: 600px;
+    }
+
+    .left-arrow{
+        background-image: url('/img/slider_left.svg');
+        width: 50px;
+        height: 50px;
+        background-size: contain;
+        top: 35%;
+        left: 2%;
+        opacity: 1;
+        position: absolute;
+        transition: all 1s ease-in-out;
+        z-index: 1;
+        cursor: pointer;
+    }
+
+
+    .right-arrow{
+        background-image: url('/img/slider_right.svg');
+        width: 50px;
+        height: 50px;
+        background-size: contain;
+        top: 35%;
+        right: 2%;
+        opacity: 1;
+        position: absolute;
+        transition: all 1s ease-in-out;
+        z-index: 1;
+        cursor: pointer;
+    }
+
+    .description-arrow-left, .description-arrow-right {
+        color: #fff;
+        cursor: pointer;
+    }
+
+    .dot {
+        background-color: #fff;
+        height: 5px;
+        width: 5px;
+        border-radius: 10px;
+    }
+
+    .activeDot{
+        background-color: #E3B873;
+        height: 10px;
+        width: 10px;
+        border-radius: 10px;
+    }
+
+    .dots{
+        align-items: center;
+        display: flex;
+        width: 30px;
+        justify-content: space-between;
+    }
+
+    .slider_arrows{
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .city{
+        color: #fff;
+        cursor: pointer;
+    }
+
+    .active-city {
+        color: #E3B873;
+        border-bottom: #E3B873;
+        border-bottom-width: 2em;
+    }
+
+    .description-slide{
+        display: none;   
+    }
+
+    .active-description{
+        grid-column: 1 / 2;
+        grid-row: 3;
+        display: grid;
+        margin-top: 20px;
+        grid-template-columns: 200px 200px;
+        grid-template-rows: 100px 100px;
+        color: aliceblue;
+    }
 
     @media screen and (max-width: 768px) {
 
