--- a/style.css
+++ b/style.css
@@ -995,7 +995,7 @@
     }
 
     .left-arrow{
-        background-image: url('/img/slider_left.svg');
+        background-image: url('/img/slider_left1.svg');
         width: 50px;
         height: 50px;
         background-size: contain;
@@ -1010,7 +1010,7 @@
 
 
     .right-arrow{
-        background-image: url('/img/slider_right.svg');
+        background-image: url('/img/slider_right1.svg');
         width: 50px;
         height: 50px;
         background-size: contain;
