--- a/style.css
+++ b/style.css
@@ -1010,7 +1010,7 @@
 
 
     .right-arrow{
-        background-image: url('img/arrowToTheRight.png');
+        background-image: url('img/arrowRight.svg');
         width: 50px;
         height: 50px;
         background-size: contain;
