--- a/style.css
+++ b/style.css
@@ -995,7 +995,7 @@
     }
 
     .left-arrow{
-        background-image: url('img/arrowToTheLeft.png');
+        background-image: url('img/arrowttleft.svg');
         width: 50px;
         height: 50px;
         background-size: contain;
@@ -1010,7 +1010,7 @@
 
 
     .right-arrow{
-        background-image: url('img/arrowRight.svg');
+        background-image: url('img/arrowttright.svg');
         width: 50px;
         height: 50px;
         background-size: contain;
